--- a/sample.html
+++ b/sample.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>初めてのHTML</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     DMM WEBCAMP1日目！
     <a href="https://web-camp.io/">WebCamp1日目！</a>
+
+    <p id="word-red">この文章だけ赤にしたい</p>
+    <p>この文章は黒のまま</p>
+    <p class="word-blue">この文章だけ青にしたい</p>
+    <p>この文章は黒のまま</p>
   </body>
 </html>
